--- a/resources/assets/GEPS-WEB-BIV-CU01.html
+++ b/resources/assets/GEPS-WEB-BIV-CU01.html
@@ -16,11 +16,11 @@
                     <div class="header-top">
                         <ul>
                             <li>
-                                <i class="ico i-user"></i>
+                                <i class="i i-user"></i>
                                 <a href="#">관리자</a>님 (접속 : 2023-07-17 15:19:02)
                             </li>
                             <li>
-                                <i class="ico i-clock"></i><span>00:29:49</span>
+                                <i class="i i-clock"></i><span>00:29:49</span>
                             </li>
                         </ul>
                         <button type="button" class="btn btn-mini btn-outline-gray">로그아웃</button>
@@ -37,7 +37,7 @@
                         <div class="header-right">
                             <nav class="header-navbar">
                                 <ul>
-                                    <li><a href="#">신상조사</a></li>
+                                    <li class="active"><a href="#">신상조사</a></li>
                                     <li><a href="#">생체정보 등록현황</a></li>
                                     <li><a href="#">VC 발급현황</a></li>
                                     <li><a href="#">통계조회</a></li>
@@ -131,7 +131,7 @@
                         <ul class="bread-crumb">
                             <li><span class="ico home">home</span></li>
                             <li><span class="ico arrow">arrow</span></li>
-                            <li>신상조사</li>
+                            <li class="active">신상조사</li>
                             <li><span class="ico arrow">arrow</span></li>
                             <li>신상조사 실시현황</li>
                         </ul>
