--- a/resources/assets/common-components.html
+++ b/resources/assets/common-components.html
@@ -25,6 +25,9 @@
                     <li>
                         <a href="#">INPUT</a>
                     </li>
+                    <li>
+                        <a href="#">TAB</a>
+                    </li>
                 </ul>
             </aside>
             <section class="common-element">
@@ -115,6 +118,12 @@
                                         <input type="radio" id="radio04" disabled checked>
                                         <label for="radio04">기본 Check + Disabled</label>
                                     </div>
+
+                                    <div class="radio-group radio-sm">
+                                        <input type="radio" id="radio05">
+                                        <label for="radio05">Radio SM</label>
+                                    </div>
+                                    
                                 </div>
                             </td>
                         </tr>
@@ -162,6 +171,104 @@
 
                         <tr>
                             <td class="pt-4">
+                                <div class="dropdown-group type2">
+                                    <h2>타이틀</h2>
+                                    <div class="dropdown-list-wrap">
+                                        <button class="dropdown-button" data-target="drop02">전체</button>
+                                        <ul id="drop02" class="dropdown-list">
+                                            <li><a href="#">신상조사 실시/응답</a></li>
+                                            <li><a href="#">응답 소요시간</a></li>
+                                            <li><a href="#">신상조사 통계지표</a></li>
+                                            <hr>
+                                            <li><a href="#">신상조사 실시/응답</a></li>
+                                            <li><a href="#">응답 소요시간</a></li>
+                                            <li><a href="#">신상조사 통계지표</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td class="pt-4">
+                                <div class="dropdown-group type3">
+                                    <h2>타이틀</h2>
+                                    <div class="dropdown-list-wrap">
+                                        <button class="dropdown-button" data-target="drop03"><i
+                                                class="i i-calendar"></i>지난 28일</button>
+                                        <ul id="drop03" class="dropdown-list">
+                                            <li>
+                                                <div class="radio-group radio-sm">
+                                                    <input type="radio" id="radio11" name="radio-group">
+                                                    <label for="radio11">지난 7일</label>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="radio-group radio-sm">
+                                                    <input type="radio" id="radio12" name="radio-group">
+                                                    <label for="radio12">지난 28일</label>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="radio-group radio-sm">
+                                                    <input type="radio" id="radio13" name="radio-group">
+                                                    <label for="radio13">지난 90일</label>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="radio-group radio-sm">
+                                                    <input type="radio" id="radio14" name="radio-group">
+                                                    <label for="radio14">지난 365일</label>
+                                                </div>
+                                            </li>
+                                            <hr>
+                                            <li>
+                                                <div class="radio-group radio-sm">
+                                                    <input type="radio" id="radio15" name="radio-group">
+                                                    <label for="radio15">2023년</label>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="radio-group radio-sm">
+                                                    <input type="radio" id="radio16" name="radio-group">
+                                                    <label for="radio16">2022년</label>
+                                                </div>
+                                            </li>
+                                            <hr>
+                                            <li>
+                                                <div class="radio-group radio-sm">
+                                                    <input type="radio" id="radio17" name="radio-group">
+                                                    <label for="radio17">6월</label>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="radio-group radio-sm">
+                                                    <input type="radio" id="radio18" name="radio-group">
+                                                    <label for="radio18">5월</label>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="radio-group radio-sm">
+                                                    <input type="radio" id="radio19" name="radio-group">
+                                                    <label for="radio19">4월</label>
+                                                </div>
+                                            </li>
+                                            <hr>
+                                            <li>
+                                                <div class="radio-group radio-sm">
+                                                    <input type="radio" id="radio20" name="radio-group">
+                                                    <label for="radio20">사용자 설정</label>
+                                                </div>
+                                            </li>
+
+                                        </ul>
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td class="pt-4">
                                 <div class="date-group">
                                     <h2>타이틀</h2>
                                     <div class="date-wrap">
@@ -174,6 +281,28 @@
                         </tr>
                     </tbody>
                 </table>
+                <table>
+                    <tbody>
+                        <tr>
+                            <td>Tab</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div class="tab-wrap">
+                                    <ul>
+                                        <li>
+                                            <a href="#">사용자 현황</a>
+                                        </li>
+                                        <li class="active">
+                                            <a href="#">사용 환경</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </td>     
+                        </tr>
+                    </tbody>
+                </table>
+
             </section>
         </section>
     </div>
