--- a/resources/assets/common-components.html
+++ b/resources/assets/common-components.html
@@ -303,6 +303,34 @@
                     </tbody>
                 </table>
 
+                <table>
+                    <tbody>
+                        <tr>
+                            <td>TABLE</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <table class="basic-table">
+                                    <thead>
+                                        <tr>
+                                            <th>a</th>
+                                            <th>a</th>
+                                            <th>a</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>d</td>     
+                                            <td>d</td>     
+                                            <td>d</td>     
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+
             </section>
         </section>
     </div>
