--- a/resources/assets/GEPS-WEB-BIV-CU01.html
+++ b/resources/assets/GEPS-WEB-BIV-CU01.html
@@ -121,7 +121,6 @@
                     </div>
                 </div>
             </div>
-
         </header>
         <div class="content">
             <div class="search-wrapper">
@@ -129,10 +128,10 @@
                     <div class="search-wrap">
                         <div class="legend">신상조사 실시현황</div>
                         <ul class="bread-crumb">
-                            <li><span class="ico home">home</span></li>
-                            <li><span class="ico arrow">arrow</span></li>
+                            <li><i class="i i-home"></i></li>
+                            <li><i class="i i-arrow-left"></i></li>
                             <li class="active">신상조사</li>
-                            <li><span class="ico arrow">arrow</span></li>
+                            <li><i class="i i-arrow-left"></i></li>
                             <li>신상조사 실시현황</li>
                         </ul>
                     </div>
@@ -244,10 +243,272 @@
                         </div>
                         <hr>
                         <div class="btn-wrap">
-                            <button type="button" class="btn btn-md btn-gray"><span class="ico reset">reset</span>초기화</button>
+                            <button type="button" class="btn btn-md btn-gray"><i class="i i-reset-wh"></i>초기화</button>
                             <button type="button" class="btn btn-md btn-primary">검색</button>
                         </div>
                     </form>
+                </div>
+            </div>
+            <div class="container">
+                <div class="sub-cont">
+                    <div class="table-wrap">
+                        <div class="table-top2">
+                            <ul class="count-wrap">
+                                <li>총</li>
+                                <ul class="count">
+                                    <li class="f-primary">497</li>
+                                    <li>건</li>
+                                </ul>
+                            </ul>
+                            <div class="btn-wrap">
+                                <button type="button" class="btn btn-sm btn-outline-gray"><i class="i i-message"></i>메시지 발송</button>
+                                <button type="button" class="btn btn-sm btn-outline-gray"><i class="i i-power"></i>신상조사 종료</button>
+                                <button type="button" class="btn btn-sm btn-outline-gray"><i class="i i-reset-bk"></i>신상조사 초기화</button>
+                                <button type="button" class="btn btn-sm btn-outline-gray"><i class="i i-down"></i>내려받기</button>
+                            </div>
+                        </div>
+                        <table class="basic-table">
+                            <colgroup>
+                                <col style="width: 54px;">
+                                <col style="width: auto;">
+                                <col style="width: auto;">
+                                <col style="width: auto;">
+                                <col style="width: auto;">
+                                <col style="width: auto;">
+                                <col style="width: auto;">
+                                <col style="width: auto;">
+                                <col style="width: auto;">
+                                <col style="width: auto;">
+                                <col style="width: auto;">
+                                <col style="width: auto;">
+                                <col style="width: auto;">
+                            </colgroup>
+                            <thead>
+                                <tr>
+                                    <th class="table-chk">
+                                        <div class="check-group">
+                                            <input type="checkbox" id="chkall">
+                                            <label for="chkall">기본</label>
+                                        </div>
+                                    </th>
+                                    <th>회차</th>
+                                    <th>고객번호</th>
+                                    <th>이름</th>
+                                    <th>생년월일</th>
+                                    <th>휴대전화번호</th>
+                                    <th>인증정책</th>
+                                    <th>진행상태</th>
+                                    <th>본인인증여부</th>
+                                    <th>수행여부</th>
+                                    <th>수행일자</th>
+                                    <th>안명인증</th>
+                                    <th>음성인증</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td class="table-chk">
+                                        <div class="check-group">
+                                            <input type="checkbox" id="chk05">
+                                            <label for="chk05">기본</label>
+                                        </div>
+                                    </td>
+                                    <td>6</td>
+                                    <td>000000000000</td>
+                                    <td>김믿음</td>
+                                    <td>YYYY-MM-DD</td>
+                                    <td>010-0000-0000</td>
+                                    <td>안면</td>
+                                    <td>진행</td>
+                                    <td>미인증</td>
+                                    <td>미수행</td>
+                                    <td>-</td>
+                                    <td>ooooo</td>
+                                    <td>xxxxx</td>
+                                </tr>
+                                <tr>
+                                    <td class="table-chk">
+                                        <div class="check-group">
+                                            <input type="checkbox" id="chk06">
+                                            <label for="chk06">기본</label>
+                                        </div>
+                                    </td>
+                                    <td>6</td>
+                                    <td>000000000000</td>
+                                    <td>김믿음</td>
+                                    <td>YYYY-MM-DD</td>
+                                    <td>010-0000-0000</td>
+                                    <td>안면</td>
+                                    <td>진행</td>
+                                    <td>미인증</td>
+                                    <td>미수행</td>
+                                    <td>-</td>
+                                    <td>ooooo</td>
+                                    <td>xxxxx</td>
+                                </tr>
+                                <tr>
+                                    <td class="table-chk">
+                                        <div class="check-group">
+                                            <input type="checkbox" id="chk07">
+                                            <label for="chk07">기본</label>
+                                        </div>
+                                    </td>
+                                    <td>6</td>
+                                    <td>000000000000</td>
+                                    <td>김믿음</td>
+                                    <td>YYYY-MM-DD</td>
+                                    <td>010-0000-0000</td>
+                                    <td>안면</td>
+                                    <td>진행</td>
+                                    <td>미인증</td>
+                                    <td>미수행</td>
+                                    <td>-</td>
+                                    <td>ooooo</td>
+                                    <td>xxxxx</td>
+                                </tr>
+                                <tr>
+                                    <td class="table-chk">
+                                        <div class="check-group">
+                                            <input type="checkbox" id="chk08">
+                                            <label for="chk08">기본</label>
+                                        </div>
+                                    </td>
+                                    <td>6</td>
+                                    <td>000000000000</td>
+                                    <td>김믿음</td>
+                                    <td>YYYY-MM-DD</td>
+                                    <td>010-0000-0000</td>
+                                    <td>안면</td>
+                                    <td>진행</td>
+                                    <td>미인증</td>
+                                    <td>미수행</td>
+                                    <td>-</td>
+                                    <td>ooooo</td>
+                                    <td>xxxxx</td>
+                                </tr>
+                                <tr>
+                                    <td class="table-chk">
+                                        <div class="check-group">
+                                            <input type="checkbox" id="chk09">
+                                            <label for="chk09">기본</label>
+                                        </div>
+                                    </td>
+                                    <td>6</td>
+                                    <td>000000000000</td>
+                                    <td>김믿음</td>
+                                    <td>YYYY-MM-DD</td>
+                                    <td>010-0000-0000</td>
+                                    <td>안면</td>
+                                    <td>진행</td>
+                                    <td>미인증</td>
+                                    <td>미수행</td>
+                                    <td>-</td>
+                                    <td>ooooo</td>
+                                    <td>xxxxx</td>
+                                </tr>
+                                <tr>
+                                    <td class="table-chk">
+                                        <div class="check-group">
+                                            <input type="checkbox" id="chk10">
+                                            <label for="chk10">기본</label>
+                                        </div>
+                                    </td>
+                                    <td>6</td>
+                                    <td>000000000000</td>
+                                    <td>김믿음</td>
+                                    <td>YYYY-MM-DD</td>
+                                    <td>010-0000-0000</td>
+                                    <td>안면</td>
+                                    <td>진행</td>
+                                    <td>미인증</td>
+                                    <td>미수행</td>
+                                    <td>-</td>
+                                    <td>ooooo</td>
+                                    <td>xxxxx</td>
+                                </tr>
+                                <tr>
+                                    <td class="table-chk">
+                                        <div class="check-group">
+                                            <input type="checkbox" id="chk11">
+                                            <label for="chk11">기본</label>
+                                        </div>
+                                    </td>
+                                    <td>6</td>
+                                    <td>000000000000</td>
+                                    <td>김믿음</td>
+                                    <td>YYYY-MM-DD</td>
+                                    <td>010-0000-0000</td>
+                                    <td>안면</td>
+                                    <td>진행</td>
+                                    <td>미인증</td>
+                                    <td>미수행</td>
+                                    <td>-</td>
+                                    <td>ooooo</td>
+                                    <td>xxxxx</td>
+                                </tr>
+                                <tr>
+                                    <td class="table-chk">
+                                        <div class="check-group">
+                                            <input type="checkbox" id="chk12">
+                                            <label for="chk12">기본</label>
+                                        </div>
+                                    </td>
+                                    <td>6</td>
+                                    <td>000000000000</td>
+                                    <td>김믿음</td>
+                                    <td>YYYY-MM-DD</td>
+                                    <td>010-0000-0000</td>
+                                    <td>안면</td>
+                                    <td>진행</td>
+                                    <td>미인증</td>
+                                    <td>미수행</td>
+                                    <td>-</td>
+                                    <td>ooooo</td>
+                                    <td>xxxxx</td>
+                                </tr>
+                                <tr>
+                                    <td class="table-chk">
+                                        <div class="check-group">
+                                            <input type="checkbox" id="chk13">
+                                            <label for="chk13">기본</label>
+                                        </div>
+                                    </td>
+                                    <td>6</td>
+                                    <td>000000000000</td>
+                                    <td>김믿음</td>
+                                    <td>YYYY-MM-DD</td>
+                                    <td>010-0000-0000</td>
+                                    <td>안면</td>
+                                    <td>진행</td>
+                                    <td>미인증</td>
+                                    <td>미수행</td>
+                                    <td>-</td>
+                                    <td>ooooo</td>
+                                    <td>xxxxx</td>
+                                </tr>
+                                <tr>
+                                    <td class="table-chk">
+                                        <div class="check-group">
+                                            <input type="checkbox" id="chk14">
+                                            <label for="chk14">기본</label>
+                                        </div>
+                                    </td>
+                                    <td>6</td>
+                                    <td>000000000000</td>
+                                    <td>김믿음</td>
+                                    <td>YYYY-MM-DD</td>
+                                    <td>010-0000-0000</td>
+                                    <td>안면</td>
+                                    <td>진행</td>
+                                    <td>미인증</td>
+                                    <td>미수행</td>
+                                    <td>-</td>
+                                    <td>ooooo</td>
+                                    <td>xxxxx</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
