--- a/resources/assets/GEPS-WEB-STA-US02.html
+++ b/resources/assets/GEPS-WEB-STA-US02.html
@@ -129,7 +129,15 @@
                 <div class="sub-cont">
                     <div class="sub-cont-top ais">
                         <h1>사용자 통계</h1>
-                        <!-- depth -->
+                        <ul class="bread-crumb">
+                            <li><span class="ico home">home</span></li>
+                            <li><span class="ico arrow">arrow</span></li>
+                            <li class="active">통계조회</li>
+                            <li><span class="ico arrow">arrow</span></li>
+                            <li class="active">사용자 통계</li>
+                            <li><span class="ico arrow">arrow</span></li>
+                            <li>사용환경</li>
+                        </ul>
                     </div>
                     <div class="tab-wrap mt-6">
                         <ul>
