BV01 신상조사통계

--- a/resources/assets/GEPS-WEB-BIV-CU01.html
+++ b/resources/assets/GEPS-WEB-BIV-CU01.html
@@ -135,7 +135,7 @@
                             <li>신상조사 실시현황</li>
                         </ul>
                     </div>
-                    <form action="#" class="bg-white">
+                    <form action="#" class="form bg-white pa4864 g32">
                         <div class="options-wrapper">
                             <div class="options-wrap">
                                 <div class="input-group">
@@ -252,7 +252,7 @@
             <div class="container">
                 <div class="sub-cont">
                     <div class="table-wrap">
-                        <div class="table-top2">
+                        <div class="table-top2 mb16">
                             <ul class="count-wrap">
                                 <li>총</li>
                                 <ul class="count">
